# RLI

./: .gitignore  .impeccable.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: design-system.md  motion.md
scripts/: download-rg.sh  gli-memory  rli-memory  test-memory-e2e.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: gli-claude-hook.sh  gli-codex-hook.sh  gli-gemini-hook.sh
src-tauri/src/: agent_hooks.rs  block_id.rs  claude_hooks.rs  claude_mem.rs  claude_usage.rs  connections.rs  flat_storage.rs  flat_term.rs  fs.rs  gemini.rs  git.rs  helper_agent.rs  keychain.rs  lib.rs  main.rs  memory.rs  pr.rs  pty.rs  search.rs  state.rs  term.rs  worktree.rs
src-tauri/src/browser/: binary.rs  chrome.rs  daemon.rs  mod.rs
src-tauri/src/memory/: daemon.rs  dedupe.rs  extract.rs
src/browser/: BrowserPane.tsx
src/connections/: ConnectionsPanel.tsx  ConnectionsView.tsx
src/design/: cm6-theme.ts  fonts.css  icons.ts  motion.css  motion.ts  picker-icons.ts  tokens.css  xterm-theme.ts
src/editor/: AskCard.tsx  BinaryView.tsx  Editor.tsx  MarkdownToggle.tsx  MarkdownView.tsx
src/files/: FileContextMenu.tsx  FileTree.tsx  FileTypeIcon.test.ts  FileTypeIcon.tsx
src/git/: AllChangesView.tsx  DiffView.tsx  GitPanel.tsx
src/graph/: GraphView.tsx
src/hooks/: useArrowFocus.ts  useFocusActiveTerminal.ts  useGitStatus.test.ts  useGitStatus.ts  useIsFullscreen.ts  useKeyboardShortcuts.ts  useOpenUrlInBrowser.ts  useSessionSummary.ts  useSpatialNavigation.ts  useVisibleTerminalSet.ts
src/lib/: browser.ts  claudeUsage.test.ts  claudeUsage.ts  connections.ts  fileKind.ts  fs.ts  gemini.ts  git.ts  gstack.ts  helper-agent.ts  memory.ts  persistence.ts  projectDialog.ts  search.ts  sessions.ts  updater.ts  urlMatch.ts  worktrees.ts
src/lib/tauri/: term.test.ts  term.ts
src/onboarding/: ApiKeyDialog.tsx
src/palette/: CommandPalette.tsx  SearchOverlay.tsx
src/primitives/: Button.tsx  ColorPicker.tsx  HairlineDivider.tsx  Icon.tsx  IconButton.tsx  KeyChord.tsx  Loader.tsx  StatusDot.tsx  Toast.tsx  Tooltip.tsx
src/shell/: ActivityRail.tsx  AppShell.tsx  BranchSwitcher.tsx  ContextMenu.tsx  CreatePRDialog.tsx  ErrorBoundary.tsx  IconPickerDialog.tsx  MainColumn.tsx  Pane.tsx  RepositorySettingsView.tsx  RightPanel.tsx  SettingsView.tsx  Sidebar.tsx  SplitLayout.tsx  StatusBar.tsx  TopBar.tsx  UpdaterToast.tsx  WindowChrome.tsx
src/state/: AppState.tsx  agentActivityStore.ts  appState.test.ts  paneTree.test.ts  paneTree.ts  types.ts
src/terminal/: Block.tsx  BlockList.tsx  BlockTerminal.tsx  CanvasGrid.tsx  CellRow.tsx  ClaudePill.tsx  ClaudeUsageBar.tsx  FullGrid.tsx  LiveBlock.tsx  PromptInput.tsx  PtyPassthrough.tsx  Terminal.tsx  TerminalStatusBar.tsx  blockLogic.test.ts  blockLogic.ts  formatBlockMeta.ts  keyEncoding.test.ts  keyEncoding.ts  parseAnsi.ts  sessionMemory.ts  terminalActivityStore.ts  terminalFocusRegistry.ts  types.ts  useTerminalSession.ts
src/terminal/gpu/: Atlas.ts  GridRenderer.ts
src/workspace/: PaneDragContext.tsx  PaneFrame.tsx  SplitChooser.tsx  WorkspaceLayout.tsx
