[package]
name = "rli"
version = "0.0.1"
description = "A confident dark instrument for running CLI coding agents."
authors = ["raeedz"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "rli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# macOS-only: Touch ID prompt + plain Keychain storage for the Gemini
# API key. We can't use kSecAttrAccessControl (data-protection keychain
# biometric ACL) because that requires `keychain-access-groups` +
# Team-ID-signed bundles — dev / ad-hoc builds get errSecMissingEntitlement
# (-34018). Instead: prompt the user via LAContext for Touch ID, then
# write/read a normal generic-password keychain entry through the
# `keyring` crate. Same UX, no entitlement requirement.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSError", "NSData", "NSDate", "NSValue"] }
objc2-local-authentication = { version = "0.3", default-features = false, features = ["std", "LAContext", "block2"] }
block2 = "0.6"

# Profile tweaks for release builds — small + fast binary.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
