[package]
name = "rli"
version = "0.0.1"
description = "A confident dark instrument for running CLI coding agents."
authors = ["raeedz"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "rli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# Browser daemon: in-house replacement for gstack's localhost:4000 service.
# Spawns a headless Chrome and exposes /health, /status, /screenshot,
# /console/recent, /navigate, /click, /type, /key over HTTP so RLI's own
# BrowserPane *and* a `claude` running in any RLI terminal pane can
# drive the same browser session via the same contract.
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

# Profile tweaks for release builds — small + fast binary.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
